--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <H1>Aquí iría el titulo de la página</H1>
     <p>Esto es un parrafo</p>
+    <p>Segundo parrafo de prueba</p>
 </body>
 </html>
