Se agregó hoja de estilos

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style href="Estilo.css">
 <body>
     <H1>Aquí iría el titulo de la página</H1>
     <p>Esto es un parrafo</p>
