--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="Estilo.css">
 </head>
-<style href="Estilo.css">
+
 <body>
     <H1>Aquí iría el titulo de la página</H1>
     <p>Esto es un parrafo</p>
